# xdeskie

./: Cargo.toml  Makefile  README.md  xdeskie.1
src/: cli.rs  commands.rs  main.rs  pager.rs  popup.rs  state.rs  x11.rs
src/commands/: desktop.rs  window.rs
