[package]
name = "xdeskie"
version = "0.1.0"
edition = "2021"
description = "X11 virtual desktop manager CLI"

[dependencies]
x11rb = { version = "0.13", features = ["randr"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
